--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/react-stopwatch-countdown/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React stopwatch</title>
-    <script type="module" crossorigin src="/assets/index.124227ee.js"></script>
-    <link rel="stylesheet" href="/assets/index.6dbf6b5a.css">
+    <script type="module" crossorigin src="/react-stopwatch-countdown/assets/index.124227ee.js"></script>
+    <link rel="stylesheet" href="/react-stopwatch-countdown/assets/index.6dbf6b5a.css">
   </head>
   <body>
     <div id="root"></div>
